fix(backend): fixed totp implementation
